--- a/imusic/package.json
+++ b/imusic/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.80.6",
     "three": "^0.170.0"
   },
   "devDependencies": {
