--- a/imusic/package.json
+++ b/imusic/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.5",
     "framer-motion": "^11.11.10",
+    "gsap": "^3.12.5",
     "ldrs": "^1.0.2",
     "next": "14.2.15",
     "react": "^18",
